@@ -48,6 +48,9 @@ fai (3.2.21) unstable; urgency=low
     count as extra RAID volumes being defined.
   * setup-storage/Parser.pm, setup-storage/Sizes.pm: Added support for raid10
     (thanks William Francis for suggesting this).
+  * setup-storage/Volumes.pm: Fixed perl syntax error, properly handle
+    existing empty volume groups (thanks Brian Kroth and Cajus Pollmeier for
+    debugging this).  (closes: #532321)
   
  -- Thomas Lange <lange@debian.org>  Sun, 19 Jul 2009 12:08:02 +0200
 
